--- a/QuickNotes/Views/Home/Index.cshtml
+++ b/QuickNotes/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
     }
 </style>
 
-<div ng-app="MainModule">    
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" ng-controller="NotesController">
+<div ng-app="MainModule" ng-controller="NotesController">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
                 <img src="@Url.Content("~/Content/images/carousel/img_1.jpg")" alt="First slide">
@@ -33,7 +33,7 @@
         <div class="pull-right">
             <span id="banner" class="open-banner glyphicon glyphicon-export" title="open/close banner"></span>
         </div>
-        <div ng-controller="ListController">
+        <div>
             <div ng-repeat="note in notes">
                 <div class="q-note" id="{{ note.IdStr }}">
                     {{ note.NoteContent }}
@@ -56,6 +56,7 @@
 
     mainModule.controller("NotesController", function($scope, $http, $timeout) {
         $scope.note = "";
+        $scope.notes = [];
 
         $scope.noteAdded = false;
 
@@ -65,6 +66,7 @@
                 url: root + 'api/list/addnote?noteContent=' + $scope.note
             }).success(function(data) {
                 $scope.noteAdded = true;
+                $scope.getNotes();
                 $timeout(function() {
                     $scope.noteAdded = false;
                 }, 2000);
@@ -72,18 +74,18 @@
                 
             });
         };
-    });
 
-    mainModule.controller("ListController", function($scope, $http) {
-        $scope.notes = [];
+        $scope.getNotes = function() {
+            $http.get(root + 'api/list/getnotes').success(function (data, status, headers, config) {
+                $scope.notes = data;
+            }).error(function (data, status, headers, config) {
 
-        $http.get(root + 'api/list/getnotes').success(function (data, status, headers, config) {            
-            $scope.notes = data;
-        }).error(function(data, status, headers, config) {
+            });
+        };
 
-        });
+        $scope.getNotes();
 
-        $scope.selectNote = function(event) {
+        $scope.selectNote = function (event) {
             selectNote(event.target);
         };
     });
