--- a/QuickNotes/Views/Home/Index.cshtml
+++ b/QuickNotes/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                 <div class="q-options">
                     <span class="q-option q-select" ng-click="selectNote($event)">select</span>
                     &nbsp;&nbsp;&nbsp;
-                    <span class="q-option">delete</span>
+                    <span class="q-option" ng-click="removeNote(note.NoteId)">delete</span>
                 </div>
                 <br/><br/><br/>
             </div>
@@ -53,95 +53,7 @@
     </div>
 </div>
 
-<script>
-    var root = '@Url.Content("~/")';
-
-    var mainModule = angular.module("MainModule", []);
-
-    mainModule.controller("NotesController", function($scope, $http, $timeout) {
-        $scope.note = "";
-        $scope.notes = [];
-
-        $scope.noteAdded = false;
-
-        $scope.busy = false;
-        $scope.noteAdding = false;
-
-        $scope.addNote = function () {
-            $scope.noteAdding = true;
-            $http({
-                method: 'get',
-                url: root + 'api/list/addnote?noteContent=' + $scope.note
-            }).success(function (data) {
-                $scope.noteAdding = false;
-                $scope.noteAdded = true;
-                $scope.getNotes();
-                $timeout(function() {
-                    $scope.noteAdded = false;
-                }, 2000);
-            }).error(function(data) {
-                
-            });
-        };
-
-        $scope.getNotes = function () {
-            $scope.busy = true;
-            $http.get(root + 'api/list/getnotes').success(function (data, status, headers, config) {
-                $scope.notes = data;
-                $scope.busy = false;
-            }).error(function (data, status, headers, config) {
-
-            });
-        };
-
-        $scope.getNotes();
-
-        $scope.selectNote = function (event) {
-            selectNote(event.target);
-        };
-    });
-</script>
-
 @section scripts
 {
-    <script>
-        function SelectText(element) {
-            var doc = document, text = doc.getElementById(element), range, selection;
-            if (doc.body.createTextRange) {
-                range = document.body.createTextRange();
-                range.moveToElementText(text);
-                range.select();
-            } else if (window.getSelection) {
-                selection = window.getSelection();
-                range = document.createRange();
-                range.selectNodeContents(text);
-                selection.removeAllRanges();
-                selection.addRange(range);
-            }
-        }
-
-        function selectNote(element) {
-            var note = $(element).parent().prev();
-            SelectText($(note).prop('id'));
-        }
-        
-        $(function() {
-            $('#banner').on('click', function () {
-                $('#banner').hide();
-                if ($('#banner').hasClass('closed-banner')) {
-                    $('.space').hide();
-                }
-                $("#myCarousel").animate({
-                        height: "toggle"
-                }, 1000, function () {                    
-                    if ($('#banner').hasClass('open-banner')) {
-                        $('#banner').removeClass('open-banner glyphicon-export').addClass('closed-banner glyphicon-import').show();
-                        $('.space').show();
-                    } else {
-                        $('#banner').removeClass('closed-banner glyphicon-import').addClass('open-banner glyphicon-export').show();                        
-                    }
-                });
-            });
-        });
-    </script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/notes-misc.js")"></script>
 }
