--- a/QuickNotes/Views/Shared/_Layout.cshtml
+++ b/QuickNotes/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <script type="text/javascript">
+        var root = '@Url.Content("~/")';
+    </script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/angular")
 </head>
