--- a/QuickNotes/Views/Home/Index.cshtml
+++ b/QuickNotes/Views/Home/Index.cshtml
@@ -51,6 +51,12 @@
             </div>
         </div>
     </div>
+    
+    <div class="form-group">
+        <label >Copy #1</label>
+        <input type="text" class="form-control" placeholder="Enter text to copy" ng-model="copy1">
+    </div>
+    <button class="btn btn-default" clip-copy="copy1">Copy!</button>
 </div>
 
 @section scripts
