--- a/QuickNotes/Views/Shared/_Layout.cshtml
+++ b/QuickNotes/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
         var root = '@Url.Content("~/")';
     </script>
     @Styles.Render("~/Content/css")
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.1.6/ZeroClipboard.min.js"></script>
     @Scripts.Render("~/bundles/angular")
 </head>
 <body>
