--- a/QuickNotes/Views/Home/Index.cshtml
+++ b/QuickNotes/Views/Home/Index.cshtml
@@ -43,20 +43,22 @@
                     {{ note.NoteContent }}
                 </div>
                 <div class="q-options">
-                    <span class="q-option q-select" ng-click="selectNote($event)">select</span>
+                    <span class="q-option q-select" ng-hide="isFlashAvailable()" ng-click="selectNote($event)">
+                        <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> select
+                    </span>
                     &nbsp;&nbsp;&nbsp;
-                    <span class="q-option" ng-click="removeNote(note.NoteId)">delete</span>
+                    <span class="q-option" clip-copy="note.NoteContent">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> copy
+                    </span>
+                    &nbsp;&nbsp;&nbsp;
+                    <span class="q-option" ng-click="removeNote(note.NoteId)">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> delete
+                    </span>
                 </div>
                 <br/><br/><br/>
             </div>
         </div>
     </div>
-    
-    <div class="form-group">
-        <label >Copy #1</label>
-        <input type="text" class="form-control" placeholder="Enter text to copy" ng-model="copy1">
-    </div>
-    <button class="btn btn-default" clip-copy="copy1">Copy!</button>
 </div>
 
 @section scripts
