--- a/QuickNotes/Views/Home/Sticky.cshtml
+++ b/QuickNotes/Views/Home/Sticky.cshtml
@@ -39,180 +39,132 @@
         padding: 10em;
     }
 
-        ul li a
-        {
-            text-decoration: none;
-            color: #000;
-            background: #ffc;
-            display: block;
-            height: 20em;
-            width: 20em;
-            padding: 5em;
-            -moz-box-shadow: 5px 5px 7px rgba(33,33,33,1);
-            -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-            box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-            -moz-transition: -moz-transform .15s linear;
-            -o-transition: -o-transform .15s linear;
-            -webkit-transition: -webkit-transform .15s linear;
-        }
-
-        ul li
-        {
-            margin: 1em;
-            float: left;
-        }
-
-            ul li h2
-            {
-                font-size: 140%;
-                font-weight: bold;
-                padding-bottom: 10px;
-            }
-
-            ul li p
-            {
-                font-family: "Reenie Beanie",arial,sans-serif;
-                font-size: 180%;
-            }
-
-            ul li a
-            {
-                -webkit-transform: rotate(-6deg);
-                -o-transform: rotate(-6deg);
-                -moz-transform: rotate(-6deg);
-            }
-
-            ul li:nth-child(even) a
-            {
-                -o-transform: rotate(4deg);
-                -webkit-transform: rotate(4deg);
-                -moz-transform: rotate(4deg);
-                position: relative;
-                top: 5px;
-                background: #cfc;
-            }
-
-            ul li:nth-child(3n) a
-            {
-                -o-transform: rotate(-3deg);
-                -webkit-transform: rotate(-3deg);
-                -moz-transform: rotate(-3deg);
-                position: relative;
-                top: -5px;
-                background: #ccf;
-            }
-
-            ul li:nth-child(5n) a
-            {
-                -o-transform: rotate(5deg);
-                -webkit-transform: rotate(5deg);
-                -moz-transform: rotate(5deg);
-                position: relative;
-                top: -10px;
-            }
-
-            ul li a:hover, ul li a:focus
-            {
-                box-shadow: 10px 10px 7px rgba(0,0,0,.7);
-                -moz-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
-                -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
-                -webkit-transform: scale(1.25);
-                -moz-transform: scale(1.25);
-                -o-transform: scale(1.25);
-                position: relative;
-                z-index: 5;
-                text-decoration: none;
-                color: black;
-            }
-
-    ol
+    ul li a
     {
-        text-align: center;
+        text-decoration: none;
+        color: #000;
+        background: #ffc;
+        display: block;
+        height: 20em;
+        width: 40em;
+        padding: 5em;
+        -moz-box-shadow: 5px 5px 7px rgba(33,33,33,1);
+        -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+        box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+        -moz-transition: -moz-transform .15s linear;
+        -o-transition: -o-transform .15s linear;
+        -webkit-transition: -webkit-transform .15s linear;
     }
 
-        ol li
-        {
-            display: inline;
-            padding-right: 1em;
-        }
+    ul li
+    {
+        margin: 1em;
+        float: left;
+    }
 
-            ol li a
-            {
-                color: #fff;
-            }
+    ul li h2
+    {
+        font-size: 140%;
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+
+    ul li p
+    {
+        font-family: "Reenie Beanie",arial,sans-serif;
+        font-size: 180%;
+    }
+
+    ul li a
+    {
+        -webkit-transform: rotate(-6deg);
+        -o-transform: rotate(-6deg);
+        -moz-transform: rotate(-6deg);
+    }
+
+    ul li:nth-child(even) a
+    {
+        -o-transform: rotate(4deg);
+        -webkit-transform: rotate(4deg);
+        -moz-transform: rotate(4deg);
+        position: relative;
+        top: 5px;
+        background: #cfc;
+    }
+
+    ul li:nth-child(3n) a
+    {
+        -o-transform: rotate(-3deg);
+        -webkit-transform: rotate(-3deg);
+        -moz-transform: rotate(-3deg);
+        position: relative;
+        top: -5px;
+        background: #ccf;
+    }
+
+    ul li:nth-child(5n) a
+    {
+        -o-transform: rotate(5deg);
+        -webkit-transform: rotate(5deg);
+        -moz-transform: rotate(5deg);
+        position: relative;
+        top: -10px;
+    }
+
+    ul li a:hover, ul li a:focus
+    {
+        box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+        -moz-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+        -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.7);
+        position: relative;
+        z-index: 5;
+        text-decoration: none;
+        color: black;
+    }
+            
+    .information {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        background-color: #FE2E2E;
+        color: white;
+        font-weight: bold;
+        padding: 10px;
+        border: 1px solid #8A0829;
+        z-index: 999
+    }
+
+    .controls {
+        position: absolute; 
+        bottom: 5px; 
+        right: 10px; 
+        font-size: large
+    }
 </style>
 
-<ul>
-    <li>
-        <a href="#">
-            <p>Text Content #1</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #2</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #3</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #4</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #5</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #6</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #2</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #7</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-    <li>
-        <a href="#">
-            <p>Text Content #8</p>
-            <div style="position: absolute; bottom: 5px; right: 10px; font-size: large">
-                <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>&nbsp;<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </div>
-        </a>
-    </li>
-</ul>
+<div ng-app="MainModule" ng-controller="NotesController">
+    <div ng-show="busy">
+        <img src="@Url.Content("~/Content/images/loader.gif")" alt=""/>&nbsp;getting the notes...
+    </div>
+
+    <ul>
+        <li ng-repeat="note in notes">
+            <a href="#">
+                <p>{{ note.NoteContent }}</p>
+                <div class="controls">
+                    <span ng-click="displayNotice()" clip-copy="note.NoteContent">
+                        <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
+                    </span>
+                    &nbsp;
+                    <span ng-click="removeNote(note.NoteId)">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                    </span>
+                </div>
+            </a>
+        </li>
+    </ul>
+
+    <div ng-show="copy_status" class="information">
+        copied!
+    </div>
+</div>
