--- a/QuickNotes/Views/Home/Index.cshtml
+++ b/QuickNotes/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "quick notes :: home";
 }
 
+@section coreScripts
+{
+    <script type="text/javascript" src="@Url.Content("~/Scripts/notes-core.js")"></script>
+}
+
 <style type="text/css">
     .open-banner {
         position: absolute; top: 503px; right: 10px; cursor: pointer
