--- a/QuickNotes/Views/Home/Sticky.cshtml
+++ b/QuickNotes/Views/Home/Sticky.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "quick notes :: home";
 }
 
+@section coreScripts
+{
+    <script type="text/javascript" src="@Url.Content("~/Scripts/notes-core.js")"></script>
+}
+
 <br/>
 <div class="header">Your notes!</div>
 
