fix flash based copy

--- a/QuickNotes/Static/Templates/Sticky.html
+++ b/QuickNotes/Static/Templates/Sticky.html
@@ -1,6 +1,6 @@
 ﻿<ul>
     <li ng-repeat="note in notes">
-        <a href="#">
+        <a href="javascript:void(0)">
             <p>{{ note.NoteContent }}</p>
             <div class="controls">
                 <span ng-click="displayNotice()" clip-copy="note.NoteContent">
