load a default view

--- a/QuickNotes/Static/Templates/Plain.html
+++ b/QuickNotes/Static/Templates/Plain.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div class="container">
     <div ng-repeat="note in notes">
         <div class="q-note" id="{{ note.IdStr }}">
             {{ note.NoteContent }}
