--- a/QuickNotes/Views/Home/Sticky.cshtml
+++ b/QuickNotes/Views/Home/Sticky.cshtml
@@ -19,7 +19,7 @@
     </div>
 
     <ul>
-        <li ng-repeat="note in notes">
+        <li class="note" ng-repeat="note in notes">
             <a href="#">
                 <p>{{ note.NoteContent }}</p>
                 <div class="controls">
