--- a/QuickNotes/Views/Home/Mashed.cshtml
+++ b/QuickNotes/Views/Home/Mashed.cshtml
@@ -24,7 +24,7 @@
     }
 </style>
 
-<div class="container">
+<div class="container-fluid">
 
     <div ng-app="MainModule" ng-controller="SettingsController">
         <div ng-controller="NotesController">
