--- a/QuickNotes/Static/Templates/Sticky.html
+++ b/QuickNotes/Static/Templates/Sticky.html
@@ -14,3 +14,6 @@
         </a>
     </li>
 </ul>
+<div style="position: fixed; bottom: 10px; right: 10px">
+    <a href="javascript:void(0)" ng-click="markStickyAsDefault()"><span class="glyphicon glyphicon-flag"></span> Set as Default</a>
+</div>
