--- a/QuickNotes/Static/Templates/Sticky.html
+++ b/QuickNotes/Static/Templates/Sticky.html
@@ -14,6 +14,8 @@
         </a>
     </li>
 </ul>
-<div style="position: fixed; bottom: 10px; right: 10px">
-    <a href="javascript:void(0)" ng-click="markStickyAsDefault()"><span class="glyphicon glyphicon-flag"></span> Set as Default</a>
+<div class="additional-options" ng-show="showAdditionalOptions()">
+    <a href="javascript:void(0)" ng-click="markStickyAsDefault()"><span class="glyphicon glyphicon-flag"></span> Set as Default</a> 
+    <span class="seperator">/</span>
+    <a href="javascript:void(0)" ng-click="clearDefault()"><span class="glyphicon glyphicon-remove"></span> Clear Default</a>
 </div>
