--- a/QuickNotes/Views/Home/Mashed.cshtml
+++ b/QuickNotes/Views/Home/Mashed.cshtml
@@ -22,6 +22,16 @@
         border: 1px solid #8A0829;
         z-index: 999
     }
+
+    .additional-options {
+        position: fixed; 
+        bottom: 10px; 
+        right: 10px
+    }
+
+    .seperator {
+        color: gray
+    }
 </style>
 
 <div class="container-fluid">
