--- a/QuickNotes/Views/Home/Mashed.cshtml
+++ b/QuickNotes/Views/Home/Mashed.cshtml
@@ -101,5 +101,25 @@
 
 @section scripts
 {
-    <script type="text/javascript" src="@Url.Content("~/Scripts/notes-misc.js")"></script>
+    <script type="text/javascript" language="javascript">
+        function SelectText(element) {
+            var doc = document, text = doc.getElementById(element), range, selection;
+            if (doc.body.createTextRange) {
+                range = document.body.createTextRange();
+                range.moveToElementText(text);
+                range.select();
+            } else if (window.getSelection) {
+                selection = window.getSelection();
+                range = document.createRange();
+                range.selectNodeContents(text);
+                selection.removeAllRanges();
+                selection.addRange(range);
+            }
+        }
+
+        function selectNote(element) {
+            var note = $(element).parent().prev();
+            SelectText($(note).prop('id'));
+        }
+    </script>
 }
